<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >
    
	<ScrollView android:id="@+id/ScrlView" 
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" >
		<LinearLayout 
	        android:id="@+id/layoutForScroll" 
	        android:orientation="vertical" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:background="@android:color/white" >
	        
			<EditText 
				android:id="@+id/pass"
				android:layout_width="fill_parent"
				android:layout_height="48dp"
				android:background="#EAEAEA"
				android:padding="5dp"
				android:inputType="textPassword"
				android:hint="@string/hint_pass" >
			</EditText>
			
			<EditText 
				android:id="@+id/confirmPass"
				android:layout_width="fill_parent"
				android:layout_height="48dp"
				android:background="#EAEAEA"
				android:padding="5dp"
				android:inputType="textPassword"
				android:hint="@string/hint_confirm_pass" >
			</EditText>
			
			<Button
				android:id="@+id/buttonResetPass"
				android:layout_width="fill_parent"
				android:layout_height="48dp"
				android:textColor="#FFFFFF"
				android:background="#3d3b37"
				android:padding="5dp"
				android:text="@string/button_reset_pass"
				android:textSize="20dp"
				 />
		 
		</LinearLayout>
	</ScrollView>
</LinearLayout>
